--- a/Secondpage.html
+++ b/Secondpage.html
@@ -4,13 +4,14 @@
 	<title>
 		wsvrld
 	</title>
+  
 	<link rel="stylesheet" href="css/head.css">
 	<link rel="stylesheet" href="css/main2.css">
 </head>
 <body>
 	<header>
 		<div class="zag">
-		WSVRLD
+		<a href="index.html" target="_self">WSVRLD</a>
 		</div>
 	</header>
 	 <div class="menu">
