--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" href="css/main.css">
@@ -7,28 +7,39 @@
 	</title>
 </head>
 <header>
-		<div class="zag">
-		WSVRLD
-		</div>
+							<style type="text/css">
+							a {
+								text-decoration: none;
+								color: #010101;
+								text-shadow: 1px 1px #918686;
+							}	
+
+
+							</style>
+								<div class="a">
+									
+										<a href="index.html" target="_self" title="Just in case you want to return to main page">WSVRLD</a>
+								</div>
+					
 </header>
 <body>
 	<div class="menu">
 		<nav>
 		<ul>
 			<li>
-				<a href="Secondpage.html" target="_blank">ABOUT US</a>
+				<a href="Secondpage.html" target="_self">ABOUT US</a>
 			</li>
 			<li>
-				<a href="Beats.html" target="_blank">BEATS</a>
+				<a href="Beats.html" target="_self">BEATS</a>
 			</li>
 			<li>
-				<a href="#">PRODUCTION</a>
+				<a href="#" target="_self" >PRODUCTION</a>
 			</li>
 			<li>
-				<a href="#">MASTERING</a>
+				<a href="#" target="_self" >MASTERING</a>
 			</li>
 			<li>
-				<a href="#">OTHER</a>
+				<a href="#" target="_self" >OTHER</a>
 			</li>
 		</ul>
 		</nav>
