--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <header>
 							<style type="text/css">
 							a {
+								font-family: gilroyextrabold;
 								text-decoration: none;
 								color: #010101;
 								text-shadow: 1px 1px #918686;
+
 							}	
 
 
@@ -27,19 +29,16 @@
 		<nav>
 		<ul>
 			<li>
-				<a href="Secondpage.html" target="_self">ABOUT US</a>
+				<a href="who_am_i.html" target="_self">КТО Я?</a>
 			</li>
 			<li>
-				<a href="Beats.html" target="_self">BEATS</a>
+				<a href="photograph.html" target="_self">ЧТО Я ФОТОГРАФИРУЮ?</a>
 			</li>
 			<li>
-				<a href="#" target="_self" >PRODUCTION</a>
+				<a href="music.html" target="_self" >ЧТО Я СОЧИНЯЮ?</a>
 			</li>
 			<li>
-				<a href="#" target="_self" >MASTERING</a>
-			</li>
-			<li>
-				<a href="#" target="_self" >OTHER</a>
+				<a href="contacts.html" target="_self" >НУЖНЫ МОИ КОНТАКТЫ?</a>
 			</li>
 		</ul>
 		</nav>
@@ -54,13 +53,7 @@
 	TO WRITE DESCRIPTION OURSELVES</br>
 		</p>
 	</div>
-	<div class="who">
-		<p>
-		</> WHO WE ARE?</br>
-		</> WHY US?</br>
-		</> WHAT ARE OUR PRINCIPLES?</br>
-		</p>
-	</div>
+	
 	</div>
 </body>
 </html>
