--- a/contacts.html
+++ b/contacts.html
@@ -12,38 +12,38 @@
 </head>
 <body>
 	<header>
-		<div class="zag">
-		WSVRLD
-		</div>
+		        <style type="text/css">
+              a {
+                font-family: gilroyextrabold;
+                text-decoration: none;
+                color: #010101;
+                text-shadow: 1px 1px #918686;
+
+              } 
+
+
+              </style>
+                <div class="a">
+                  
+                    <a href="index.html" target="_self" title="Just in case you want to return to main page">WSVRLD</a>
+                </div>
+          
   </header>
   <div class="menu">
     <nav>
       <ul>
         <li>
-          <a href="#">
-                ABOUT US
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            BEATS
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            PRODUCTION
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            MASTERING
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            OTHER
-          </a>
-        </li>
+        <a href="who_am_i.html" target="_self">КТО Я?</a>
+      </li>
+      <li>
+        <a href="photograph.html" target="_self">ЧТО Я ФОТОГРАФИРУЮ?</a>
+      </li>
+      <li>
+        <a href="music.html" target="_self" >ЧТО Я СОЧИНЯЮ?</a>
+      </li>
+      <li>
+        <a href="contacts.html" target="_self" >НУЖНЫ МОИ КОНТАКТЫ?</a>
+      </li>
       </ul>
     </nav>
 </div>
