--- a/who_am_i.html
+++ b/who_am_i.html
@@ -14,7 +14,7 @@
               a {
                 font-family: gilroyextrabold;
                 text-decoration: none;
-                color: #010101;
+                color: #ffe7d7;
                 text-shadow: 1px 1px #918686;
 
               } 
@@ -44,45 +44,10 @@
       </ul>
     </nav>
 </div>
-	<div class="content">
-	<div class="border">
-	<div class="naz">
-		<h1>
-		WHO AM</br>
-    		<p>
-      			I?
-    		</p>
-		</h1>
-		</div>
-	</div>
-	<div class="joy">
-		<p>
-			LET THE PROCESS BRING YOU A JOY
-		</p>
-  </div>
-    <div class="dude">
-    <pre>
- SHOUT OUT, MY DUDES!
-  IT’S ME, WSVRLD, 
-   YOUR GUIDE
-    IN THE WORLD OF MUSIC.
-    SPENDING TIME TRYING TO LEARN
-   ASPECTS OF 
-  NOWADAYS MUSIC STANDARTS 
- MAY TIRE AND BORE U.
-</pre>
-  </div>
-      <div class="work">
-        <p>
-          LET ME DO ALL THE DIRTY WORK.
-        </p>
-      </div>
-      <div class="final">
-        <p>
-          THE FINAL PRODUCT I VOUCH FOR WILL</br>
-          SURPISE YOU.
-          </p>
-      </div>
-</div>
+
+
+ 
+	
+ 
 </body>
 </html>
